// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserController should create a user 1`] = `
{
  "bio": "bio",
  "id": "1",
  "name": "John Doe",
  "profileImg": null,
  "username": "johndoe",
}
`;

exports[`UserController should find a user 1`] = `
{
  "user": {
    "bio": "bio",
    "createdAt": 2000-01-01T00:00:00.000Z,
    "followers": 0,
    "following": 0,
    "isActive": true,
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
}
`;

exports[`UserController should find users by name or username 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserController should get users that a user follow 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;

exports[`UserController should get users that follow a user 1`] = `
{
  "count": 1,
  "items": [
    {
      "name": "John Doe",
      "profileImg": null,
      "username": "johndoe",
    },
  ],
}
`;
